[4/4] Breathing missedcall/voicemail
Updated for Marshmallow by DU

--AICP'fied by adding to AicpExtras

Change-Id: Iea42c47ce19428fa8759959a26ba02c64b35c32d

--- a/res/xml/statusbar_layout.xml
+++ b/res/xml/statusbar_layout.xml
@@ -54,4 +54,20 @@
            android:dependency="status_bar_aicp_logo" />
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:key="breathing_notifications_category"
+        android:title="@string/breathing_notifications_category" />
+
+    <SwitchPreference
+        android:key="missed_call_breath"
+        android:title="@string/missed_call_breath_title"
+        android:summary="@string/missed_call_breath_summary"
+        android:persistent="false"/>
+
+    <SwitchPreference
+        android:key="voicemail_breath"
+        android:title="@string/voicemail_breath_title"
+        android:summary="@string/voicemail_breath_summary"
+        android:persistent="false"/>
+
 </PreferenceScreen>
