--- a/res/layout/ui_layout.xml
+++ b/res/layout/ui_layout.xml
@@ -12,7 +12,7 @@
     <Switch
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/Selinuxswitch"
+        android:text="Selinux switch"
         android:textSize="20sp"
         android:id="@+id/swSelinux"
         android:layout_gravity="center_horizontal"
@@ -36,7 +36,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/Setonboot"
+            android:text="Set on boot"
             android:id="@+id/tvOnBoot"
             style="TextAppearance.AppCompat.Body1"
             android:layout_weight="1"
