--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -1,24 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
-  Copyright 2015 Davor
-
-  This file is part of Paranoid OTA.
-
-  Paranoid OTA is free software: you can redistribute it and/or modify
-  it under the terms of the GNU General Public License as published by
-  the Free Software Foundation, either version 3 of the License, or
-  (at your option) any later version.
-
-  Paranoid OTA is distributed in the hope that it will be useful,
-  but WITHOUT ANY WARRANTY; without even the implied warranty of
-  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  GNU General Public License for more details.
-
-  You should have received a copy of the GNU General Public License
-  along with Paranoid OTA.  If not, see <http://www.gnu.org/licenses/>.
--->
-
-
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="amountArray">
         <item>@string/fuck_amount_0</item>
@@ -30,5 +10,4 @@
         <item>1</item>
         <item>2</item>
     </string-array>
-
 </resources>
