--- a/res/xml/statusbar_layout.xml
+++ b/res/xml/statusbar_layout.xml
@@ -27,6 +27,12 @@
         android:summary="@string/battery_low_notif_summary"
         android:defaultValue="true" />
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="disable_immersive_message"
+        android:title="@string/disable_immersive_message_title"
+        android:summary="@string/disable_immersive_message_summary"
+        android:defaultValue="false" />
+
     <Preference
         android:key="traffic"
         android:title="@string/traffic_category" />
