--- a/res/drawable/side_nav_bar.xml
+++ b/res/drawable/side_nav_bar.xml
@@ -1,9 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+    android:shape="rectangle">
     <gradient
-        android:startColor="#314048"
-        android:centerColor="#455A64"
-        android:endColor="#617e8c"
-        android:type="linear"
-        android:angle="135"/>
+        android:angle="135"
+        android:centerColor="@color/centerColor"
+        android:endColor="@color/endColor"
+        android:startColor="@color/startColor"
+        android:type="linear" />
 </shape>
