--- a/res/layout/ui_layout.xml
+++ b/res/layout/ui_layout.xml
@@ -1,59 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
+    android:background="?android:attr/selectableItemBackground"
     android:orientation="vertical"
-    android:background="?android:attr/selectableItemBackground" >
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
 
     <Switch
+        android:id="@+id/swSelinux"
+        style="TextAppearance.AppCompat.Body1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/Selinuxswitch"
-        android:textSize="20sp"
-        android:id="@+id/swSelinux"
         android:layout_gravity="center_horizontal"
-        style="TextAppearance.AppCompat.Body1" />
+        android:text="@string/selinuxswitch"
+        android:textSize="20sp" />
 
     <TextView
+        android:id="@+id/tvSelinuxSummary"
+        style="@style/TextAppearance.AppCompat.Caption"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvSelinuxSummary"
         android:layout_gravity="center_horizontal"
-        android:textSize="16sp"
-        style="@style/TextAppearance.AppCompat.Caption" />
+        android:textSize="16sp" />
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="8dp">
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal">
 
         <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/Setonboot"
             android:id="@+id/tvOnBoot"
             style="TextAppearance.AppCompat.Body1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="20sp"
-            android:clickable="false" />
+            android:clickable="false"
+            android:text="@string/setonboot"
+            android:textSize="20sp" />
 
         <CheckBox
+            android:id="@+id/chkSelinuxOnBoot"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/chkSelinuxOnBoot" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <View
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:background="#B6B6B6" />
 
 </LinearLayout>
