--- a/res/layout/about_logo.xml
+++ b/res/layout/about_logo.xml
@@ -22,6 +22,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="160dp"
-            android:src="@drawable/aicp_about_header" />
+            android:src="@drawable/aicp_about_header"
+            android:scaleType="centerCrop" />
 
 </LinearLayout> 
