--- a/res/xml/recents_panel_layout.xml
+++ b/res/xml/recents_panel_layout.xml
@@ -31,5 +31,12 @@
         android:defaultValue="3"
         android:dependency="show_clear_all_recents" />
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="recents_clear_all_dismiss_all"
+        android:title="@string/recents_clear_all_dismiss_all_title"
+        android:summary="@string/recents_clear_all_dismiss_all_summary"
+        android:defaultValue="true"
+        android:dependency="show_clear_all_recents" />
+
 </PreferenceScreen>
 
