--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -17,5 +17,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:pure="http://schemas.android.com/apk/res-auto" >
 
+    <SwitchPreference
+        android:key="qs_show_brightness_slider"
+        android:title="@string/qs_brightness_slider_title"
+        android:persistent="false"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
 
