Add LCD density setting (SQUASH)
It includes these patches:
https://github.com/CyanogenMod/android_packages_apps_Settings/commit/804fefaeb00080c05f738422475da8f6818db145
https://github.com/CyanogenMod/android_packages_apps_Settings/commit/d24c204697a23bce58e8133f299fd080e9c28f75
https://github.com/CyanogenMod/android_packages_apps_Settings/commit/4d9c12c2d3b530686317c3562d60c2816536986d

AICPfy:
FWB part is already in, so
bring it into AicpExtras
Also add needed permissions to manifest:
SHUTDOWN
MANAGE_APP_TOKENS
SET_ACTIVITY_WATCHER
WAKE_LOCK
READ_FRAME_BUFFER
GET_APP_OPS_STATS
ACCESS_WIFI_STATE

Change-Id: I3d55615127cc735ea0443d519520d0cb6cfbfb38

--- a/res/xml/display_anim_layout.xml
+++ b/res/xml/display_anim_layout.xml
@@ -6,4 +6,9 @@
         android:title="@string/toast_icon_title"
         android:summary="@string/toast_icon_summary" />
 
+    <ListPreference
+        android:key="lcd_density"
+        android:title="@string/lcd_density"
+        android:persistent="false" />
+
 </PreferenceScreen>
