Force Expanded Notifications [2/2]
Change-Id: Ic4a19d7cf0e0e451f5a8419dbc7044118df3de42

--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -23,5 +23,10 @@
         android:persistent="false"
         android:defaultValue="true" />
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="force_expanded_notifications"
+        android:title="@string/force_expanded_notifications_title"
+        android:summary="@string/force_expanded_notifications_summary" />
+
 </PreferenceScreen>
 
