MediaScanner behavior on boot [3/3]
Change-Id: I6e0af70894207e281e4e3838411928b077fc26a7

--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -49,4 +49,11 @@
         android:inputType="textNoSuggestions"
         android:persistent="false" />
 
+    <ListPreference
+        android:key="media_scanner_on_boot"
+        android:dialogTitle="@string/media_scanner_on_boot_title"
+        android:title="@string/media_scanner_on_boot_title"
+        android:entries="@array/media_scanner_on_boot_entries"
+        android:entryValues="@array/media_scanner_on_boot_values" />
+
 </PreferenceScreen>
