Show carrier label / custom & change color [2/2] [Squashed]
PureNexus edits:
* tweaked to play nice with our colorpicker
* tweaked to play nice with our custom settings

Keyguard/Statusbar Carrier label options [2/2]
* Stock behavior(only on keyguard), only on statusbar,both disabled or both enabled

PureNexus Edits:
* adapted to replace the carrier label toggle in 89baf2f
* this now provides more robust options for carrier label customization

Settings: Status bar carrier label (2/2)
* allow choosing to show on keyguard, normal status bar or both

Signed-off-by: Altaf-Mahdi <altaf.mahdi@gmail.com>

Credit/Thanks to @Altaf-Mahdi @beanstown106 and @martincz

AICPfy:
- Make it work with AicpExtras

Change-Id: I34ad9466ff8590a72b062fb8b150d5287536484d

--- a/res/xml/statusbar_layout.xml
+++ b/res/xml/statusbar_layout.xml
@@ -13,4 +13,8 @@
         android:fragment="com.lordclockan.aicpextras.Traffic"
         android:title="@string/traffic_category" />
 
+    <Preference
+        android:key="carrierlabel"
+        android:title="@string/carrier_options" />
+
 </PreferenceScreen>
