Add option to disable scrolling cache [2/2]
scrolling cache can cause performance lag due to GC
allow user to enable/disable/force scrolling cache on the fly
via Settings > CM > Performance > Scrolling cache
see the framework part at http://review.cyanogenmod.com/#change,12302

Original commit from way back in 2012
nadlabak/android_packages_apps_CMParts@2c10284

Change-Id: I1c1dae7a4d646313767f81230a4786ed1a761cba

--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <ListPreference
+        android:key="pref_scrollingcache"
+        android:dialogTitle="@string/pref_scrollingcache_title"
+        android:title="@string/pref_scrollingcache_title"
+        android:summary="@string/pref_scrollingcache_summary"
+        android:entries="@array/entries_scrollingcache"
+        android:entryValues="@array/values_scrollingcache" />
+
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="disable_fc_notifications"
         android:title="@string/disable_fc_notifications_title"
