--- a/res/xml/statusbar_layout.xml
+++ b/res/xml/statusbar_layout.xml
@@ -8,6 +8,13 @@
         android:summaryOff="@string/su_indicator_summary_off"
         android:defaultValue="true" />
 
+    <!-- Headset icon switch -->
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="show_headset_icon"
+        android:title="@string/show_headset_icon_title"
+        android:summary="@string/show_headset_icon_summary"
+        android:defaultValue="true" />
+
     <Preference
         android:key="traffic"
         android:title="@string/traffic_category" />
