--- a/res/xml/display_anim_layout.xml
+++ b/res/xml/display_anim_layout.xml
@@ -11,4 +11,8 @@
         android:title="@string/lcd_density"
         android:persistent="false" />
 
+    <Preference
+        android:key="gestureanywhere"
+        android:title="@string/gesture_anywhere_title" />
+
 </PreferenceScreen>
