--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -6,4 +6,8 @@
     <color name="centerColor">#455A64</color>
     <color name="endColor">#617e8c</color>
     <color name="line_color">#B6B6B6</color>
+
+    <!-- Gesture Anywhere -->
+    <color name="ga_gesture_color">@android:color/holo_blue_light</color>
+
 </resources>
