Statusbar weather (SQUASH)
https://github.com/AICP/packages_apps_Settings/commit/b2df44e19739b0b59e5758b853d961b11e3f0657
https://github.com/AICP/packages_apps_Settings/commit/f4c1bbc0fee712aa1688fb19244b496c89481b3b
https://github.com/AICP/packages_apps_Settings/commit/5ddc711a1cbfddaf48921c1844e7a630663b53ce
https://github.com/AICP/packages_apps_Settings/commit/5ddc711a1cbfddaf48921c1844e7a630663b53ce
https://github.com/AICP/packages_apps_Settings/commit/ebb62ba199424291bfb6f7b7262fb11f03a9b1cc
https://github.com/AICP/packages_apps_Settings/commit/72534c9c36c469b501ab685aae0a859e1440f4f0

Make it work with AicpExtras

Change-Id: I70ad4a4cde0ea6410f6c5e286ed3f9e780ff66c5

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -18,6 +18,7 @@
 <resources>
 
     <declare-styleable name="SeekBarPreference">
+        <attr name="defaultVal" format="integer" />
         <attr name="maximum" format="integer" />
         <attr name="minimum" format="integer" />
         <attr name="unitsLeft" format="string" />
