--- a/res/xml/statusbar_layout.xml
+++ b/res/xml/statusbar_layout.xml
@@ -27,4 +27,8 @@
         android:key="batterybar"
         android:title="@string/battery_bar_title" />
 
+    <Preference
+        android:key="statusbar_weather"
+        android:title="@string/status_bar_temperature_title" />
+
 </PreferenceScreen>
