--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -7,6 +7,13 @@
     <color name="endColor">#617e8c</color>
     <color name="line_color">#B6B6B6</color>
 
+    <color name="background_material_dark">#FF303030</color>
+    <color name="foreground_material_dark">#FFFFFFFF</color>
+    <color name="primary_text_material_dark">#FFFFFFFF</color>
+    <color name="primary_text_material_light">#DE000000</color>
+    <color name="secondary_text_material_dark">#B3FFFFFF</color>
+    <color name="secondary_text_material_light">#8A000000</color>
+
     <!-- Gesture Anywhere -->
     <color name="ga_gesture_color">@android:color/holo_blue_light</color>
 
