Sort out some PreferenceActivities:
- Change PreferenceActivities with seekbars to
AppCompatActivity, theme them nicely so they get
Appbar with title
- Sexy dialog theming
- Export all colors so it can be themed with CMTE
- Clean up a bit

Change-Id: Ib1763c422dd2f0d91c6781cf132becb12cd21c98

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#607D8B</color>
+    <color name="colorPrimaryDark">#455A64</color>
     <color name="startColor">#314048</color>
     <color name="centerColor">#455A64</color>
     <color name="endColor">#617e8c</color>
     <color name="line_color">#B6B6B6</color>
+    <color name="colorAccent">#FF607D8B</color>
+    <color name="overlayBackground">#00ffffff</color>
+
+    <color name="background_material_dark">#FF303030</color>
+    <color name="foreground_material_dark">#FFFFFFFF</color>
+    <color name="primary_text_material_dark">#FFFFFFFF</color>
+    <color name="primary_text_material_light">#DE000000</color>
+    <color name="secondary_text_material_dark">#B3FFFFFF</color>
+    <color name="secondary_text_material_light">#8A000000</color>
 
     <!-- Gesture Anywhere -->
     <color name="ga_gesture_color">@android:color/holo_blue_light</color>
