--- a/res/xml/recents_panel_layout.xml
+++ b/res/xml/recents_panel_layout.xml
@@ -38,5 +38,12 @@
         android:defaultValue="true"
         android:dependency="show_clear_all_recents" />
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="recents_full_screen"
+        android:title="@string/recents_show_fullscreen"
+        android:summaryOn="@string/recents_fullscreen_summary_enabled"
+        android:summaryOff="@string/recents_fullscreen_summary_disabled"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
 
