--- a/res/xml/display_anim_layout.xml
+++ b/res/xml/display_anim_layout.xml
@@ -12,6 +12,10 @@
         android:persistent="false" />
 
     <Preference
+        android:key="lockscreen_weather"
+        android:title="@string/weahter_lockscreen_category" />
+
+    <Preference
         android:key="gestureanywhere"
         android:title="@string/gesture_anywhere_title" />
 
