Forward Port: Add Camera sound toggle [2/3]
Port from PureNexus:
* https://github.com/PureNexusProject/android_packages_apps_PureSettings/commit/504b48a975ea063bea826466defe1206ad6df3cb

PureNexus edits:
* killed the dialog popup i come from touchwiz where we kill all the popups lol

Change-Id: I9e664272b18d3293a027133eb4c80868cf21ec06

--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -9,6 +9,13 @@
         android:summary="@string/headset_connect_player_summary"
         android:defaultValue="false" />
 
+    <!-- Camera shutter -->
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="camera_sounds"
+        android:title="@string/camera_sounds_title"
+        android:summary="@string/camera_sounds_summary"
+        android:defaultValue="true" />
+
     <!-- Screenshot tone -->
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="screenshot_sound"
