AicpExtras: Lockscreen blur & see through (2/2)
AICPfy

Change-Id: I226b0ca155e76a803730c1f7464300eb1f46b312

--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aicpextras="http://schemas.android.com/apk/res/com.lordclockan.aicpextras">
 
     <ListPreference
         android:key="pref_scrollingcache"
@@ -14,5 +16,19 @@
         android:title="@string/disable_fc_notifications_title"
         android:summary="@string/disable_fc_notifications_summary"
         android:defaultValue="false" />
+
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="lockscreen_see_through"
+        android:title="@string/lockscreen_see_through_title"
+        android:summary="@string/lockscreen_see_through_summary"
+        android:defaultValue="false" />
+
+    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+        android:key="lockscreen_blur_radius"
+        android:title="@string/lockscreen_blur_radius"
+        android:max="25"
+        aicpextras:min="0"
+        aicpextras:defaultValue="14"
+        android:dependency="lockscreen_see_through" />
 
 </PreferenceScreen>
