Add CMSettings preference files from Settings app
Giving authorship to Adnan
Had to use magic to get it compiled

Change-Id: Iea38168a5f112634275ea351e4db8d7021dc2c9f

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -19,4 +19,8 @@
     <!-- Gesture Anywhere -->
     <color name="ga_gesture_color">@android:color/holo_blue_light</color>
 
+    <!-- Switch Bar Text Color -->
+    <color name="switchbar_text_color">#ffffffff</color>
+    <color name="switch_accent_color">#ff7fcac3</color>
+
 </resources>
