--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -33,4 +33,8 @@
         <attr name="digits" format="integer" />
     </declare-styleable>
 
+    <attr name="switchBarTheme" format="reference" />
+    <attr name="switchBarMarginStart" format="dimension" />
+    <attr name="switchBarMarginEnd" format="dimension" />
+
 </resources>
