--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -35,6 +35,12 @@
         android:summary="@string/status_bar_custom_header_summary"
         android:defaultValue="false"/>
 
+    <com.lordclockan.aicpextras.preferences.CMSystemSettingSwitchPreference
+        android:key="status_bar_show_weather"
+        android:title="@string/notif_drawer_weather_title"
+        android:summary="@string/notif_drawer_weather_summary"
+        android:defaultValue="true"/>
+
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="force_expanded_notifications"
         android:title="@string/force_expanded_notifications_title"
