AicpExtras: Bring Stats Back
Change-Id: Iaf7cbac918b0b444dd4b73a8edf494d211e0033f

--- a/res/menu/activity_main_drawer.xml
+++ b/res/menu/activity_main_drawer.xml
@@ -48,6 +48,12 @@
                 android:checkable="true"
                 android:icon="@android:drawable/ic_menu_share"
                 android:title="@string/about_title" />
+            <item
+                android:id="@+id/stats_aicp"
+                android:checkable="true"
+                android:icon="@android:drawable/ic_menu_share"
+                android:title="@string/stats_title" />
+
         </menu>
     </item>
 
