--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -17,4 +17,8 @@
         android:summary="@string/disable_fc_notifications_summary"
         android:defaultValue="false" />
 
+    <Preference
+        android:key="stats_aicp"
+        android:title="@string/stats_title" />
+
 </PreferenceScreen>
