AicpExtras: Bring Stats Back
PS2: yep
PS3: Fix activity start from menu
PS4: Fix FC on boot
PS5: Fix Permission (ro.romstats.url) in build.pro needs to be there
PS6: Re-organize sub packages & added Permissions at Run Time

Change-Id: Iaf7cbac918b0b444dd4b73a8edf494d211e0033f

--- a/res/xml/status_bar_weather.xml
+++ b/res/xml/status_bar_weather.xml
@@ -13,7 +13,7 @@
 
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aicpextras="http://schemas.android.com/apk/res/com.lordclockan.aicpextras"
+    xmlns:aicpextras="http://schemas.android.com/apk/res/com.lordclockan"
     android:title="@string/status_bar_temperature_title">
 
         <ListPreference
