--- a/res/xml/gesture_anywhere.xml
+++ b/res/xml/gesture_anywhere.xml
@@ -15,7 +15,7 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aicpextras="http://schemas.android.com/apk/res/com.lordclockan.aicpextras"
+    xmlns:aicpextras="http://schemas.android.com/apk/res/com.lordclockan"
     android:title="@string/gesture_anywhere_title" >
 
     <SwitchPreference
