--- a/res/xml/lockscreen_layout.xml
+++ b/res/xml/lockscreen_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aicpextras="http://schemas.android.com/apk/res/com.lordclockan.aicpextras">
+    xmlns:aicpextras="http://schemas.android.com/apk/res/com.lordclockan">
 
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_see_through"
