--- a/res/xml/traffic.xml
+++ b/res/xml/traffic.xml
@@ -17,7 +17,7 @@
 <PreferenceScreen
     android:title="@string/network_traffic_title"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aicpextras="http://schemas.android.com/apk/res/com.lordclockan.aicpextras">
+    xmlns:aicpextras="http://schemas.android.com/apk/res/com.lordclockan">
 
     <ListPreference
         android:key="network_traffic_state"
