--- a/res/xml/lockscreen_layout.xml
+++ b/res/xml/lockscreen_layout.xml
@@ -17,6 +17,12 @@
         aicpextras:defaultValue="14"
         android:dependency="lockscreen_see_through" />
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="power_menu_lockscreen"
+        android:title="@string/powermenu_lockscreen_title"
+        android:summary="@string/powermenu_lockscreen_summary"
+        android:defaultValue="true" />
+
     <Preference
         android:key="lockscreen_weather"
         android:title="@string/weahter_lockscreen_category" />
