AicpExtras: Bring Stats Back
PS2: yep
PS3: Fix activity start from menu
PS4: Fix FC on boot
PS5: Fix Permission (ro.romstats.url) in build.pro needs to be there
PS6: Re-organize sub packages & added Permissions at Run Time
PS7: Fix all those errors!
PS8: move stats to about section

Change-Id: Iaf7cbac918b0b444dd4b73a8edf494d211e0033f

--- a/res/xml/about_layout.xml
+++ b/res/xml/about_layout.xml
@@ -22,4 +22,8 @@
         android:title="@string/changelog_title"
         android:summary="@string/changelog_title_summary"/>
 
+    <Preference
+        android:key="stats_aicp"
+        android:title="@string/stats_title" />
+
 </PreferenceScreen>
