Keyguard Wallpaper Changer [2/2]
** DU changes **
- Added toast to reset back to default, for a better experience

AICPfy
- Bring it to AicpExtras
- Don't make new LockscreenWallpaper fragment,
include ii in LockscreenFragment

Change-Id: I30b50bfd6b0d9519f84340ed811e2267ab681fa3

--- a/res/xml/lockscreen_layout.xml
+++ b/res/xml/lockscreen_layout.xml
@@ -27,4 +27,20 @@
         android:key="lockscreen_weather"
         android:title="@string/weahter_lockscreen_category" />
 
+    <PreferenceCategory
+            android:key="lockscreen_wallpaper"
+            android:title="@string/lockscreen_category_title" >
+
+        <Preference
+            android:key="lockscreen_wallpaper_set"
+            android:title="@string/lockscreen_wallpaper_set_title"
+            android:persistent="false"/>
+
+        <Preference
+            android:key="lockscreen_wallpaper_clear"
+            android:title="@string/lockscreen_wallpaper_clear_title"
+            android:persistent="false"/>
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
