Lockscreen -> Lock screen
Change-Id: I2e96bec21fcc4906b8a2174c0896c5abf822baf0

--- a/res/xml/lockscreen_layout.xml
+++ b/res/xml/lockscreen_layout.xml
@@ -34,6 +34,7 @@
         <Preference
             android:key="lockscreen_wallpaper_set"
             android:title="@string/lockscreen_wallpaper_set_title"
+            android:summary="@string/lockscreen_wallpaper_set_summary"
             android:persistent="false"/>
 
         <Preference
