Add MultiShit nav item instead of Heads up
Change-Id: I6431494fdf9ae9ece7f51f7a897559462090378e

--- a/res/menu/activity_main_drawer.xml
+++ b/res/menu/activity_main_drawer.xml
@@ -29,10 +29,10 @@
                 android:icon="@android:drawable/ic_menu_slideshow"
                 android:title="@string/lockscreen_title" />
             <item
-                android:id="@+id/nav_headsup"
+                android:id="@+id/nav_multishit"
                 android:checkable="true"
                 android:icon="@android:drawable/ic_menu_slideshow"
-                android:title="@string/headsup_title" />
+                android:title="@string/multishit_title" />
             <item
                 android:id="@+id/nav_various"
                 android:checkable="true"
