Move app circle and ga to MultiShit fragment
Change-Id: I3ecc381750039d77c0b4c7529feeaf73c5af53f6

--- a/res/xml/multishit_layout.xml
+++ b/res/xml/multishit_layout.xml
@@ -2,8 +2,11 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <Preference
-        android:key="nothing"
-        android:title="@string/nothing_title"
-        android:enabled="false" />
+        android:key="gestureanywhere"
+        android:title="@string/gesture_anywhere_title" />
+
+    <Preference
+        android:key="app_circle_bar"
+        android:title="@string/app_circle_bar_title" />
 
 </PreferenceScreen>
