Settings: omniswitch as default recents (2/2)
AICPfy
PS1:
- Add to new MultiShit fragment
- Check if apk is installed so it removes the
OmniSwitch settings without FCing
PS2:
- Add OmniSwitch PreferenceCategory and remove
whole category instead
PS3:
- Category can't remove it's self :D

Change-Id: I4d2b5ffa021470ef0c118a72670f51c29b9be9ae

--- a/res/xml/multishit_layout.xml
+++ b/res/xml/multishit_layout.xml
@@ -9,4 +9,22 @@
         android:key="app_circle_bar"
         android:title="@string/app_circle_bar_title" />
 
+    <PreferenceCategory
+            android:key="omniswitch_category"
+            android:title="@string/omniswitch_category_title" >
+
+        <SwitchPreference
+                android:key="recents_use_omniswitch"
+                android:title="@string/recents_use_omniswitch_title"
+                android:summary="@string/recents_use_omniswitch_summary"
+                android:persistent="false" />
+
+        <Preference
+                android:key="omniswitch_start_settings"
+                android:title="@string/omniswitch_start_settings_title"
+                android:summary="@string/omniswitch_start_settings_summary"
+                android:persistent="false" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
