--- a/res/xml/multishit_layout.xml
+++ b/res/xml/multishit_layout.xml
@@ -9,4 +9,17 @@
         android:key="app_circle_bar"
         android:title="@string/app_circle_bar_title" />
 
+
+    <SwitchPreference
+            android:key="recents_use_omniswitch"
+            android:title="@string/recents_use_omniswitch_title"
+            android:summary="@string/recents_use_omniswitch_summary"
+            android:persistent="false" />
+
+    <Preference
+            android:key="omniswitch_start_settings"
+            android:title="@string/omniswitch_start_settings_title"
+            android:summary="@string/omniswitch_start_settings_summary"
+            android:persistent="false" />
+
 </PreferenceScreen>
