Add Yoga time to About logo
And many, many other :D

when adding new still img, exact img height
needs to be edited in hidden_img_layout.xml
or it will be sctreched

Change-Id: Ib011094f93c6d1d4d51f9930008cdfb1df1b47b8

--- a/res/xml/about_layout.xml
+++ b/res/xml/about_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- AICP logo -->
-    <PreferenceScreen android:key="aicp_logo"
-        android:enabled="false"
+    <PreferenceScreen
+        android:key="aicp_logo"
         android:layout="@layout/about_logo" />
 
     <Preference
