--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -35,6 +35,13 @@
         android:summary="@string/status_bar_custom_header_summary"
         android:defaultValue="false"/>
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="status_bar_custom_header_default"
+        android:title="@string/status_bar_custom_header_default_title"
+        android:summary="@string/status_bar_custom_header_default_summary"
+        android:dependency="status_bar_custom_header"
+        android:defaultValue="false"/>
+
     <com.lordclockan.aicpextras.preferences.CMSystemSettingSwitchPreference
         android:key="status_bar_show_weather"
         android:title="@string/notif_drawer_weather_title"
