--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -23,6 +23,12 @@
         android:persistent="false"
         android:defaultValue="true" />
 
+    <com.lordclockan.aicpextras.preferences.CMSystemSettingSwitchPreference
+        android:key="status_bar_quick_qs_pulldown"
+        android:title="@string/status_bar_quick_qs_pulldown_title"
+        android:summary="@string/status_bar_quick_qs_pulldown_summary"
+        android:defaultValue="true"/>
+
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="quick_settings_vibrate"
         android:title="@string/quick_settings_vibrate_title"
