--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -213,4 +213,10 @@
         <item>2</item>
     </string-array>
 
+    <!-- SlimSizer -->
+    <string-array name="slimsizer_profile_array">
+        <item >Load Profile</item>
+        <item >Save Profile</item>
+    </string-array>
+
 </resources>
