--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -17,4 +17,8 @@
         android:summary="@string/disable_fc_notifications_summary"
         android:defaultValue="false" />
 
+    <Preference
+        android:id="@+id/system_app_remover"
+        android:title="@string/system_app_remover" />
+
 </PreferenceScreen>
