Forward port System App Remover from KitKat (part 1)
AICPfy
Make it work in AicpExtras app

Change-Id: Ie71099cf4e8df4d1153d2e4da8df02d082a237a0

--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -288,4 +288,10 @@
          <item>3</item>
      </string-array>
 
+      <!-- SlimSizer -->
+      <string-array name="slimsizer_profile_array">
+         <item >Load Profile</item>
+         <item >Save Profile</item>
+      </string-array>
+
 </resources>
