--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -28,4 +28,8 @@
         android:summary="@string/double_tap_sleep_nav_bar_summary"
         android:defaultValue="false" />
 
+    <Preference
+        android:key="system_app_remover"
+        android:title="@string/system_app_remover" />
+
 </PreferenceScreen>
