--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -17,4 +17,10 @@
         android:summary="@string/disable_fc_notifications_summary"
         android:defaultValue="false" />
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="double_tap_sleep_navbar"
+        android:title="@string/double_tap_sleep_nav_bar_title"
+        android:summary="@string/double_tap_sleep_nav_bar_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
