--- a/res/xml/extensions_layout.xml
+++ b/res/xml/extensions_layout.xml
@@ -8,6 +8,10 @@
         android:title="@string/app_sidebar_title" />
 
     <Preference
+        android:key="pa_pie_control"
+        android:title="@string/pa_pie_control_title" />
+
+    <Preference
         android:key="system_app_remover"
         android:title="@string/system_app_remover" />
 
