--- a/res/xml/multishit_layout.xml
+++ b/res/xml/multishit_layout.xml
@@ -2,6 +2,10 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <Preference
+        android:key="pa_pie_control"
+        android:title="@string/pa_pie_control_title" />
+
+    <Preference
         android:key="gestureanywhere"
         android:title="@string/gesture_anywhere_title" />
 
