--- a/res/xml/notifications_layout.xml
+++ b/res/xml/notifications_layout.xml
@@ -49,6 +49,11 @@
         android:defaultValue="true"/>
 
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="enable_task_manager"
+        android:title="@string/enable_task_manager_title"
+        android:summary="@string/enable_task_manager_summary" />
+
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="force_expanded_notifications"
         android:title="@string/force_expanded_notifications_title"
         android:summary="@string/force_expanded_notifications_summary" />
