Forward port System App Remover to N
AICP changes:
Make it work in AicpExtras app
Add new CM packages to safetylist
Switched to ActionBar

Change-Id: Ie71099cf4e8df4d1153d2e4da8df02d082a237a0

--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -423,4 +423,10 @@
         <item>1</item>
         <item>2</item>
     </string-array>
+
+    <!-- SlimSizer -->
+    <string-array name="slimsizer_profile_array">
+       <item >Load Profile</item>
+       <item >Save Profile</item>
+    </string-array>
 </resources>
