--- a/res/xml/carrierlabel.xml
+++ b/res/xml/carrierlabel.xml
@@ -16,6 +16,7 @@
 
 <PreferenceScreen
     android:title="@string/carrier_options"
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <ListPreference
@@ -28,6 +29,15 @@
     <PreferenceScreen
         android:key="custom_carrier_label"
         android:title="@string/custom_carrier_label_title" />
+
+    <com.lordclockan.aicpextras.widget.SeekBarPreferenceCham
+        android:key="status_bar_carrier_font_size"
+        android:title="@string/status_bar_carrier_size"
+        android:defaultValue="14"
+        android:max="23"
+        aicpextras:min="4"
+        aicpextras:unitsLeft=""
+        aicpextras:unitsRight="dp" />
 
     <net.margaritov.preference.colorpicker.ColorPickerPreference
         android:key="status_bar_carrier_color"
