Aicp Logcat - WIP
Change-Id: I3f6241e9c4142272f86804b2b0796f8e9de1a7ec

--- a/res/xml/about_layout.xml
+++ b/res/xml/about_layout.xml
@@ -26,4 +26,9 @@
         android:key="aicp_stats"
         android:title="@string/stats_title" />
 
+    <Preference
+        android:key="aicp_logcat"
+        android:title="@string/logcat_title"
+        android:summary="@string/logcat_summary"/>
+
 </PreferenceScreen>
