--- a/res/xml/about_layout.xml
+++ b/res/xml/about_layout.xml
@@ -26,4 +26,8 @@
         android:key="aicp_stats"
         android:title="@string/stats_title" />
 
+    <Preference
+        android:key="aicp_logcat"
+        android:title="@string/logcat_title" />
+
 </PreferenceScreen>
