AE: Add three-fingers-swipe to screenshot [2/2]
Change-Id: Ie9a6556a0e1065609d0b2bc67dd57c976efd440c

--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -28,6 +28,12 @@
         android:summary="@string/double_tap_sleep_nav_bar_summary"
         android:defaultValue="false" />
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="three_finger_gesture"
+        android:title="@string/three_finger_gesture"
+        android:summary="@string/three_finger_gesture_summary"
+        android:defaultValue="true" />
+
     <Preference
         android:key="system_app_remover"
         android:title="@string/system_app_remover" />
