AE: Slim Recents (2/2)
AICPfy:
- Brought back from AicpLP

Change-Id: I081fbaa3e5f5c73a0c9625aa86a306399a260c14

--- a/res/xml/multishit_layout.xml
+++ b/res/xml/multishit_layout.xml
@@ -13,6 +13,10 @@
         android:key="app_circle_bar"
         android:title="@string/app_circle_bar_title" />
 
+    <Preference
+        android:key="slim_recents_panel"
+        android:title="@string/use_slim_recents_title" />
+
     <PreferenceCategory
             android:key="omniswitch_category"
             android:title="@string/omniswitch_category_title" >
