--- a/res/xml/display_anim_layout.xml
+++ b/res/xml/display_anim_layout.xml
@@ -19,6 +19,15 @@
         android:persistent="false" />
 
     <ListPreference
+        android:key="power_menu_animations"
+        android:title="@string/power_menu_animation_title"
+        android:dialogTitle="@string/power_menu_animation_dialog_title"
+        android:entries="@array/power_menu_animations_entries"
+        android:entryValues="@array/power_menu_animations_values"
+        android:summary="@string/power_menu_animation_summary"
+        android:persistent="false" />
+
+   <ListPreference
         android:key="lcd_density"
         android:title="@string/lcd_density"
         android:persistent="false" />
