Expand Aicp logcat - WIP
Add kmesg and dmesg to the play

TODO:
- Clear all checkboxes on opening activity
- Append new lines of text correctly to sharedIntent

Change-Id: I3b27a4bf0f85b7c7f4257688c0fffd8f8ef177b0

--- a/res/menu/activity_main_drawer.xml
+++ b/res/menu/activity_main_drawer.xml
@@ -44,6 +44,11 @@
     <item android:title="@string/other_title">
         <menu>
             <item
+                android:id="@+id/nav_log_it"
+                android:checkable="true"
+                android:icon="@drawable/ic_about"
+                android:title="@string/log_that_shit_title" />
+            <item
                 android:id="@+id/nav_about"
                 android:checkable="true"
                 android:icon="@drawable/ic_about"
