Powermenu screenshot delay [2/2]
Brought up from MM for AICP

Change-Id: I10d450f3c6093b1f230dbbab9e4ccf6132625d66
Signed-off-by: Ali B <abittin@gmail.com>

--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -16,6 +16,11 @@
         android:summary="@string/camera_sounds_summary"
         android:defaultValue="true" />
 
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="disable_immersive_message"
+        android:title="@string/disable_immersive_message_title"
+        android:summary="@string/disable_immersive_message_summary" />
+
     <!-- Screenshot tone -->
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="screenshot_sound"
@@ -29,10 +34,9 @@
         android:key="screenshot_type"
         android:title="@string/screenshot_type_title" />
 
-    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
-        android:key="disable_immersive_message"
-        android:title="@string/disable_immersive_message_title"
-        android:summary="@string/disable_immersive_message_summary" />
+    <com.lordclockan.aicpextras.widget.NumberPickerPreference
+        android:key="screenshot_delay"
+        android:title="@string/powermenu_screenshot_delay_title" />
 
     <com.lordclockan.aicpextras.preferences.HostnamePreference
         android:key="device_hostname"
