--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -29,6 +29,10 @@
         android:key="screenshot_type"
         android:title="@string/screenshot_type_title" />
 
+    <com.lordclockan.aicpextras.widget.NumberPickerPreference
+        android:key="screenshot_delay"
+        android:title="@string/powermenu_screenshot_delay_title" />
+
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="disable_immersive_message"
         android:title="@string/disable_immersive_message_title"
