AE: AOKP system animations (2/2) - Squashed
Includes this from @cristianomatos:
https://github.com/AICP/packages_apps_Settings/commit/2b6b1efadb4c2471780e6cdc1f01db20b4e7f2bc

Change-Id: Ia12bf782a1f6062b39db9e8f16c258ecdfb5db4c

--- a/res/xml/display_anim_layout.xml
+++ b/res/xml/display_anim_layout.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <Preference
+        android:key="aokp_animation"
+        android:title="@string/aokp_animation_title"
+        android:summary="@string/aokp_animation_summary" />
+
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="toast_icon"
         android:title="@string/toast_icon_title"
