--- a/res/xml/display_anim_layout.xml
+++ b/res/xml/display_anim_layout.xml
@@ -12,6 +12,13 @@
         android:summary="@string/toast_icon_summary" />
 
     <ListPreference
+        android:key="toast_animation"
+        android:title="@string/toast_animation_title"
+        android:entries="@array/toast_animation_entries"
+        android:entryValues="@array/toast_animation_values"
+        android:persistent="false" />
+
+    <ListPreference
         android:key="lcd_density"
         android:title="@string/lcd_density"
         android:persistent="false" />
