--- a/res/xml/statusbar_layout.xml
+++ b/res/xml/statusbar_layout.xml
@@ -8,6 +8,18 @@
         android:summaryOff="@string/su_indicator_summary_off"
         android:defaultValue="true" />
 
+    <!-- Status bar AICP logo -->
+    <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+            android:key="status_bar_aicp_logo"
+            android:title="@string/status_bar_aicp_logo_title"
+            android:summary="@string/status_bar_aicp_logo_summary" />
+
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="status_bar_aicp_logo_color"
+            android:title="@string/status_bar_aicp_logo_color"
+            android:defaultValue="0xffffffff"
+            android:dependency="status_bar_aicp_logo" />
+
     <!-- Headset icon switch -->
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="show_headset_icon"
