AE: Make Posible  to change DNS WIP
Change-Id: Idcfa2e95e2daf1b5c5f2f221e74549ea2f36ae32

--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -38,4 +38,8 @@
         android:key="system_app_remover"
         android:title="@string/system_app_remover" />
 
+    <Preference
+        android:key="dns_changer"
+        android:title="@string/dns_changer" />
+
 </PreferenceScreen>
