--- a/res/xml/statusbar_layout.xml
+++ b/res/xml/statusbar_layout.xml
@@ -8,18 +8,6 @@
         android:summaryOff="@string/su_indicator_summary_off"
         android:defaultValue="true" />
 
-    <!-- Status bar AICP logo -->
-    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
-        android:key="status_bar_aicp_logo"
-        android:title="@string/status_bar_aicp_logo_title"
-        android:summary="@string/status_bar_aicp_logo_summary" />
-
-    <net.margaritov.preference.colorpicker.ColorPickerPreference
-        android:key="status_bar_aicp_logo_color"
-        android:title="@string/status_bar_aicp_logo_color"
-        android:defaultValue="0xffffffff"
-        android:dependency="status_bar_aicp_logo" />
-
     <!-- Headset icon switch -->
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="show_headset_icon"
@@ -27,7 +15,23 @@
         android:summary="@string/show_headset_icon_summary"
         android:defaultValue="true" />
 
-    <Preference
+
+    <!-- Status bar AICP logo -->
+    <PreferenceCategory
+            android:title="@string/status_bar_logo_category_title">
+        <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+            android:key="status_bar_aicp_logo"
+            android:title="@string/status_bar_aicp_logo_title"
+            android:summary="@string/status_bar_aicp_logo_summary" />
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="status_bar_aicp_logo_color"
+            android:title="@string/status_bar_aicp_logo_color"
+            android:defaultValue="0xffffffff"
+            android:dependency="status_bar_aicp_logo" />
+    </PreferenceCategory>
+
+   <Preference
         android:key="traffic"
         android:title="@string/traffic_category" />
 
