AE: IME animations (2/2)
Taken from here:
https://gerrit.omnirom.org/#/c/4249/36

AICPfy:
- Giving authorship to Squadzone
PS2:
- Increase padding for EditText
- Set EditText color
PS3:
- Idiot, it's hint color, not text color
- Also use secondary text color and increase padding a little more

Change-Id: I3872a0366bfe813da28219f0449e846469f932c9

--- a/res/xml/display_anim_layout.xml
+++ b/res/xml/display_anim_layout.xml
@@ -43,6 +43,11 @@
         android:summary="@string/power_menu_animation_summary"
         android:persistent="false" />
 
+   <Preference
+        android:key="ime_animations"
+        android:title="@string/ime_animation_title"
+        android:summary="@string/ime_animation_summary" />
+
    <ListPreference
         android:key="lcd_density"
         android:title="@string/lcd_density"
