--- a/res/xml/various_layout.xml
+++ b/res/xml/various_layout.xml
@@ -29,6 +29,12 @@
         android:defaultValue="false" />
 
     <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
+        android:key="headset_connect_player"
+        android:title="@string/headset_connect_player_title"
+        android:summary="@string/headset_connect_player_summary"
+        android:defaultValue="false" />
+
+    <com.lordclockan.aicpextras.preferences.SystemSettingSwitchPreference
         android:key="three_finger_gesture"
         android:title="@string/three_finger_gesture"
         android:summary="@string/three_finger_gesture_summary"
